--- a/package.json
+++ b/package.json
@@ -3,21 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "axios": "^1.2.1",
     "bootstrap": "^5.3.0-alpha1",
-    "formik": "^2.2.9",
     "i18next-browser-languagedetector": "^7.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.1.1",
     "react-icons": "^4.7.1",
-    "react-query": "^3.39.2",
     "react-router-dom": "^6.6.1",
     "react-scripts": "5.0.1",
-    "reactstrap": "^9.1.5",
-    "sass": "^1.57.1",
-    "yup": "^0.32.11"
+    "sass": "^1.57.1"
   },
   "scripts": {
     "start": "react-scripts start",
